--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>WDD 131</title>
-        <link rel="stylesheet" href="styles/layout.css">
-    </head>
-    <body>
-        <header>
-            <div class="header-content">
-                <p>Header Content</p>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
-            </nav>
-        </header>
-        <div class="content">
-            <main>
-                <p>Main Content</p>
-            </main>
-            <aside>
-                <p>Aside Content</p>
-            </aside>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Emenike Ozioma | WDD 131</title>
+    <link rel="stylesheet" href="styles/layout.css">
+</head>
+
+<body>
+    <header>
+        <div class="header-content">
+            <p>Header Content</p>
         </div>
-        <footer>
-            <p>Footer Content</p>
-        </footer>
-    </body>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="content">
+        <main>
+            <p>Main Content</p>
+        </main>
+        <aside>
+            <p>Aside Content</p>
+        </aside>
+    </div>
+    <footer>
+        <p>Footer Content</p>
+    </footer>
+</body>
+
 </html>
