--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <h1>WDD 131: Dynamic Web Fundamentals - <span class="highlight-name">Emenike Ozioma</span></h1>
         <nav>
-            <a href="www.linkedin.com/in/ozioma-emenike">Linkedin</a>
+            <a href="https://www.linkedin.com/in/ozioma-emenike">Linkedin</a>
             <a href="https://byui.instructure.com/">I-Learn</a>
             <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/hel/5?lang=eng">Scripture</a>
             <a href="#">Final Project</a>
@@ -26,10 +26,11 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero sit voluptatibus rem.
-                    Ipsam praesentium quae voluptatibus vero obcaecati at aspernatur velit expedita minus
-                    doloremque animi, odit facere, eos hic alias nemo! Veritatis impedit dolores rem labore ut,
-                    quae, ex eveniet excepturi est atque nostrum optio quisquam laboriosam eos ipsum eligendi.
+                    My name is Ozioma and i go by Ozil. I currently live with my family in Lagos.
+                    I am currently enrolled as an online student in BYU Idaho studying Web and Computer Programming.
+                    I enjoy playing video games and learning new skills that can impact my life. I also enjoy watching 
+                    football and participating in outdoor activites. I love swimming mostly on holidays. I love watching movies 
+                    that is centered on technology, IT to be precised. I love travelling and exploring different countries.
                 </p>
                 <img src="images/profile-picture.JPG" alt="Image of Emenike Ozioma" width="120">
             </div>
@@ -40,23 +41,23 @@
                     <img src="images/nigeria-flag.webp" alt="Flag of Nigeria" width="150">
                     <p style="font-style: italic; font-size: small; padding: 5px;">Official Flag of Nigeria</p>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore omnis aut maiores?
-                    Accusamus rem reprehenderit dignissimos reiciendis quae enim deserunt laudantium doloribus
-                    hic molestias voluptas culpa blanditiis sunt veniam quas error ut explicabo facere in, sint
-                    id nihil? Autem ratione quibusdam vitae culpa velit quaerat ullam qui possimus excepturi
-                    praesentium!
+                <p> Nigeria is famous for its beautiful landmarks, delicious cuisine and for its rich culture and
+                    traditions. It is known worldwide for being home to some iconic landmarks. These include
+                    the stunning Tarkwa Bay, the prominent Aso Rock and the Third Mainland Bridge which is the 
+                    longest bridge in West Africa. It is the most populous country in Africa, and the world's 
+                    sixth-most populous country.
                 </p>
             </div>
         </section>
         <section class="card">
             <h2>Web Dev Resources</h2>
             <ul class="resource-link">
-                <li><a href="#">Dev to Community</a></li>
-                <li><a href="#">Smashing Magazine</a></li>
-                <li><a href="#">CSS Tricks</a></li>
-                <li><a href="#">W3 Schools</a></li>
-                <li><a href="#">Udemy</a></li>
-                <li><a href="#">Lorem Picsum Image Placeholder</a></li>
+                <li><a href="https://dev.to/">Dev to Community</a></li>
+                <li><a href="https://www.smashingmagazine.com/">Smashing Magazine</a></li>
+                <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
+                <li><a href="https://www.w3schools.com/">W3 Schools</a></li>
+                <li><a href="https://www.udemy.com/">Udemy</a></li>
+                <li><a href="https://picsum.photos/">Lorem Picsum Image Placeholder</a></li>
             </ul>
         </section>
     </main>
