W01 Assignment: Home Page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131 - Dynamic Web Fundamentals - Emenike Ozioma</title>
-    <meta name="description" content="My Home Page">
+    <title>WDD 131: Dynamic Web Fundamentals - Emenike Ozioma</title>
+    <!-- Preconnect links for Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+    <meta name="description" content="Emenike Ozioma WDD131 Home Page">
     <meta name="author" content="Emenike Ozioma">
     <link rel="stylesheet" href="styles/base.css">
     <script defer src="scripts/getdates.js"></script>
@@ -28,23 +32,25 @@
                 <p>
                     My name is Ozioma and i go by Ozil. I currently live with my family in Lagos.
                     I am currently enrolled as an online student in BYU Idaho studying Web and Computer Programming.
-                    I enjoy playing video games and learning new skills that can impact my life. I also enjoy watching 
-                    football and participating in outdoor activites. I love swimming mostly on holidays. I love watching movies 
-                    that is centered on technology, IT to be precised. I love travelling and exploring different countries.
+                    I enjoy playing video games and learning new skills that can impact my life. I also enjoy watching
+                    football and participating in outdoor activites. I love swimming mostly on holidays. I love watching
+                    movies
+                    that is centered on technology, IT to be precised. I love travelling and exploring different
+                    countries.
                 </p>
                 <img src="images/profile-picture.JPG" alt="Image of Emenike Ozioma" width="120">
             </div>
             <h3>Lagos, Nigeria</h3>
-            <hr style="width: 80%; margin: 5px auto;">
+            <hr class="line">
             <div class="country-content">
-                <div class="flag">
+                <div class="flag-container">
                     <img src="images/nigeria-flag.webp" alt="Flag of Nigeria" width="150">
-                    <p style="font-style: italic; font-size: small; padding: 5px;">Official Flag of Nigeria</p>
+                    <p class="flag-name">Official Flag of Nigeria</p>
                 </div>
                 <p> Nigeria is famous for its beautiful landmarks, delicious cuisine and for its rich culture and
                     traditions. It is known worldwide for being home to some iconic landmarks. These include
-                    the stunning Tarkwa Bay, the prominent Aso Rock and the Third Mainland Bridge which is the 
-                    longest bridge in West Africa. It is the most populous country in Africa, and the world's 
+                    the stunning Tarkwa Bay, the prominent Aso Rock and the Third Mainland Bridge which is the
+                    longest bridge in West Africa. It is the most populous country in Africa, and the world's
                     sixth-most populous country.
                 </p>
             </div>
@@ -63,7 +69,7 @@
     </main>
     <footer>
         <p>&#169; <span id="currentyear"></span> 🌏 Emenike Ozioma 🌏 Lagos, Nigeria</p>
-        <p style="color: #ACEB98; font-size: small;">Last Modification: <span id="lastModified"></span></p>
+        <p class="last-modified">Last Modification: <span id="lastModified"></span></p>
     </footer>
 </body>
 
