--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1>WDD 131: Dynamic Web Fundamentals - <span class="highlight-name">Emenike Ozioma</span></h1>
+        <h1>WDD 131: Dynamic Web Fundamentals - <span>Emenike Ozioma</span></h1>
         <nav>
             <a href="https://www.linkedin.com/in/ozioma-emenike">Linkedin</a>
             <a href="https://byui.instructure.com/">I-Learn</a>
