--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131: Dynamic Web Fundamentals - Emenike Ozioma</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Emenike Ozioma</title>
     <!-- Preconnect links for Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1>WDD 131: Dynamic Web Fundamentals - <span>Emenike Ozioma</span></h1>
+        <h1>WDD 131 - Dynamic Web Fundamentals - <span>Emenike Ozioma</span></h1>
         <nav>
             <a href="https://www.linkedin.com/in/ozioma-emenike">Linkedin</a>
             <a href="https://byui.instructure.com/">I-Learn</a>
